added all shop categories but one, added tnt (only breaks player placed blocks), lots of fixes, better itembuilder clas, better death handling, queue for games, armor upgrades, sharpness etc

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -16,3 +16,6 @@ commands:
     description: 'Automatically start a game of bedwars.'
     permission: 'bedwars.admin'
     aliases: [begin]
+  joingame:
+    description: 'Join a game queue.'
+    aliases: [join]
