--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,11 @@
 
     <repositories>
         <repository>
-            <id>enginehub-maven</id>
+            <id>fawe-repo</id>
+            <url>https://www.uskyblock.ovh/maven/dependencies/</url>
+        </repository>
+        <repository>
+            <id>worldedit-repo</id>
             <url>https://maven.enginehub.org/repo/</url>
         </repository>
         <repository>
@@ -65,6 +69,10 @@
         <repository>
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>jordanosterberg-repo</id>
+            <url>https://nexus-repo.jordanosterberg.com/repository/maven-releases/</url>
         </repository>
     </repositories>
 
@@ -83,12 +91,17 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- This doesn't depend on any platform -->
         <dependency>
-            <groupId>com.sk89q.worldedit</groupId>
-            <artifactId>worldedit-core</artifactId>
-            <version>6.1.4-SNAPSHOT</version>
+            <groupId>com.boydti</groupId>
+            <artifactId>fawe-api</artifactId>
+            <version>latest</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>dev.jcsoftware</groupId>
+            <artifactId>JScoreboards</artifactId>
+            <version>2.1.4-RELEASE</version>
         </dependency>
     </dependencies>
 </project>
